--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
     <h2>Web / UI Designer</h2>
 
+    <img src="assets/img/img .jpg" alt=" ">
+
     <p>I created this website to showcase some of my recent web design work.</p> 
     
     <h3>Sample Web Pages</h3>
@@ -23,6 +25,10 @@
     <p><a href="exercises/page-2.html">IBAT Chocolates</a></p>
     <p><a href="exercises/page-3.html">Prince & Purple Rain</a></p>
     <p><a href="exercises/page-4.html">Lorem Ipsum Text</a></p>
+    <p><a href="exercises/page-5.html">Vincent van Gogh</a></p> 
+    <p><a href="exercises/page-6.html">Irish Tourism</a></p> 
+    <p><a href="exercises/page-7.html">Smoothies</a></p> 
+    <p><a href="exercises/page-8.html">Software Analytics</a></p> 
     
 
 </body>
