--- a/contact/index.html
+++ b/contact/index.html
@@ -27,7 +27,15 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
     rel="stylesheet">
 
-    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7DW8B66EBT"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-7DW8B66EBT');
+    </script>
 
 </head>
 
@@ -45,10 +53,10 @@
         <div class="col-2">
             <div class="hero-text-container">
                 <h1>Contact</h1>
-                <h2>Etiam tincidunt risus nec odio sollicitudin</h2>
+                <h2>Have a project you'd like to discuss? Let's make something great together!</h2>
             </div>
             <div class="container-btn">
-                <a href="../portfolio/index.html" class="btn btn-secondary"><span>See projects</span></a>
+                <a href="../portfolio/index.html" class="btn btn-secondary"><i class="fal fa-arrow-circle-right"></i><span>See projects</span></a>
             </div>
             
         </div>
@@ -121,13 +129,6 @@
 			<li><a href="../index.html">Home</a></li>
 			<li><a href="../portofolio/index.html">Portfolio</a></li>
 			<li><a href="#">Contact</a></li>
-		</ul>
-
-		<ul class="footer-icons">
-			<li><a href="#" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
-			<li><a href="#" target="_blank"><i class="fab fa-github-square"></i></a></li>
-			<li><a href="#" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
-			<li><a href="#" target="_blank"><i class="fab fa-instagram-square"></i></a></li>
 		</ul>
 
 		<p class="privacy"><a href="#">Privacy &amp; Legal</a></p>
