--- a/contact/index.html
+++ b/contact/index.html
@@ -7,6 +7,7 @@
     <title>Nora De Gregorio | Contact Page</title>
     <meta name="description" content="Have a website project you would like to discuss? Let's make something great together!">
 
+    
 	<!-- Preload hero image -->
 
 
@@ -77,7 +78,7 @@
         <section class="container-contact-form">
 
             <!-- Contact form starts here -->
-            <form id="contact-form" name="contact-form" accept-charset="utf-8" method="post" action="https://formspree.io/nnnnnnnn">
+            <form id="contact-form" name="contact-form" accept-charset="utf-8" method="post" action="https://formspree.io/f/xeqnzazg">
 
                 <div class="contact-form-upper text-center"><h2>Get in touch!</h2>
                     
