--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 	<!-- Font Awesome 5 icons -->
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" rel="stylesheet" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous">
 
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
+
     <!-- Light Awesome icons -->
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
 
@@ -82,7 +84,7 @@
 		</div>
 
 		<div class="col-3">
-			<figure><img src="https://picsum.photos/420/250" alt="Placeholder image"></figure>
+			<figure><img src="assets/img/project-van-gogh.png" alt="Placeholder image"></figure>
 			<h3>Vincent Van Gogh</h3>
             <div class="container-btn">
                 <a href="portfolio/index.html" class="btn btn-secondary"><i class="far fa-arrow-right"></i>View project</a>
@@ -91,7 +93,7 @@
 		</div>
 
 		<div class="col-3">
-			<figure><img src="https://picsum.photos/420/250" alt="Placeholder image"></figure>
+			<figure><img src="assets/img/project-smoothie.jpg" alt="Placeholder image"></figure>
 			<h3>Smooth Smoothies</h3>
             <div class="container-btn">
                 <a href="portfolio/index.html" class="btn btn-secondary"><i class="far fa-arrow-right"></i>View project</a>
@@ -99,7 +101,7 @@
 		</div>
 
 		<div class="col-3">
-			<figure><img src="https://picsum.photos/420/250" alt="Placeholder image"></figure>
+			<figure><img src="assets/img/project-fashion.jpg" alt="Placeholder image"></figure>
             <h3>IBAT Tours</h3>
             <div class="container-btn">
                 <a href="portfolio/index.html" class="btn btn-secondary"><i class="far fa-arrow-right"></i>View project</a>
@@ -132,6 +134,23 @@
     
        
     <script src="assets/js/menu.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
+    <script>
+    window.cookieconsent.initialise({
+        "palette": {
+            "popup": {
+                "background":"#216942",                  "text": "#b2d192"
+            },
+            "button": {
+                "background": "#afed71"
+            }
+        },
+        "content": {
+            "href": "https://noradegregorio.github.io/privacy.html"
+        }
+    });
+    </script>
 
 </body>
 </html>
