--- a/javascript/projects/tip-calculator/index.html
+++ b/javascript/projects/tip-calculator/index.html
@@ -59,6 +59,33 @@
             let serviceQuality = document.getElementById("serviceQuality").value;
             let numOfPeople = document.getElementById("numOfPeople").value;
 
+            function calaculateTip(){
+                if(billAmount == "" || serviceQuality ==0){
+                    alert("Please enter values");
+                    return;
+                
+                }
+                if(numOfPeople == "" || numOfPeople <= 1){
+                    numOfPeople = 1;
+                    document.getElementById("tipEach").style.display = "none";
+                }
+                else{
+                    document.getElementById("tipEach").style.display = "block";
+                }
+
+                var total = (billAmount * serviceQuality) / numOfPeople;
+                total = Math.round(total * 100) / 100;
+                total = total.toFixed(2);
+                document.getElementById("tipDisplayBox").style.display = "block";
+                document.getElementById("tipTotal").innerHTML = total;
+            }
+            document.getElementById("tipDisplayBox").style.display = "none";
+            document.getElementById("tipEach").style.display = "none";
+
+            document.getElementById("calculate").onclick = function(){
+                calaculateTip();
+            };
+
    </script>
 
 </body>
