--- a/contact/index.html
+++ b/contact/index.html
@@ -59,7 +59,7 @@
                 <h2>Have a project you'd like to discuss? Let's make something great together!</h2>
             </div>
             <div class="container-btn">
-                <a href="../portfolio/index.html" class="btn btn-secondary"><i class="fal fa-arrow-circle-right"></i><span>See projects</span></a>
+                <a href="../portfolio/index.html" class="btn btn-secondary"><i class="fas fa-folder"></i><span>See projects</span></a>
             </div>
             
         </div>
