--- a/portofolio/js/colours/index.html
+++ b/portofolio/js/colours/index.html
@@ -34,8 +34,8 @@
         /* Button Colours: active state */
         .theme-js a.btn:hover { background-color: darkblue }
 
-        /* .theme-js a.btn { background-image: linear-gradient(to right,#e052a0,#f15c41) } */
-        /* .theme-js a.btn:hover { filter: brightness(160%) saturate(140%) } */
+        .theme-js a.btn { background-image: linear-gradient(to right,#e052a0,#f15c41) } */
+        .theme-js a.btn:hover { filter: brightness(160%) saturate(140%) } */
 
     </style>
 
@@ -81,6 +81,20 @@
     </main>
 
     <script>
+        const arrHex = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, "A", "B", "C", "D", "E", "F"];
+        const btnColor = document.querySelector("#btn-color");
+        const strColorDisplay = document.querySelector("#color-display");
+
+
+        function colorGenerator() {
+            var str = "#";
+            for(let i=0; i<6; i++){
+                const r = Math.floor(Math.random() * arrHex.length);
+                str += arrHex[r].toString();
+            }
+            document.body.style.backgroundColor = str;
+            strColorDisplay.innerHTML = str;
+        }
         
     </script>
 
