--- a/portofolio/js/image-slideshow/index.html
+++ b/portofolio/js/image-slideshow/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript Image Slider Project | Mary Smith | Front-end Developer | </title>
+    <title>JavaScript Image Slider Project | Nora De Gregorio | Front-end Developer | </title>
     <meta name="description" content="A sample collection of my recent JavaScript projects.">
 
 	<!-- Stylesheets -->
@@ -14,9 +14,9 @@
     <style>
 
         /* ============ Header Colours =============*/
-        header.hero-block-js { background-color: var(--gray-200) }
+        header.hero-block-js { background-color: #198754 }
         header.hero-block-js h1 { color: #222 }
-        header.hero-block-js h2 { color: var(--gray-700) }
+        header.hero-block-js h2 { color: #222 }
 
         /* Main Colours */
         .theme-js { 
@@ -29,13 +29,13 @@
         .theme-js p { color: #222 }
 
         /* Button Colours: passive state */
-        .theme-js a.btn { color: #fff; background-color: blue; transition: 0.2s }
+        .theme-js a.btn { color: #fff; background-color:#0f5132; transition: 0.2s }
 
         /* Button Colours: active state */
-        .theme-js a.btn:hover { background-color: darkblue }
+        .theme-js a.btn:hover { background-color: #0a3622 }
 
-        /* .theme-js a.btn { background-image: linear-gradient(to right,#e052a0,#f15c41) } */
-        /* .theme-js a.btn:hover { filter: brightness(160%) saturate(140%) } */
+        /*.theme-js a.btn { background-image: linear-gradient(to right,#e052a0,#f15c41) }
+        .theme-js a.btn:hover { filter: brightness(160%) saturate(140%) }*/
 
         .container-slider { width: 100%; padding: 0 15px; margin: 0 auto }
 
@@ -54,7 +54,7 @@
             /* background-attachment: fixed; */
             background-position: center; 
             background-size: contain; 
-            border: 12px solid blue;
+            border: 12px solid #0f5132;
             border-radius: 15px;
             position: relative;
             margin: 0 auto;
@@ -70,13 +70,43 @@
 
         .btn-left, .btn-right {
             position: absolute; top: 50%;
-            background: blue; color: #fff;
+            background: #0f5132; color: #fff;
             font-size: 1.2rem;
-            border: 0.2rem solid blue;
+            border: 0.2rem solid #0f5132;
         }
 
         .btn-left { left: 0; transform: translate(-50%, -50%) }
         .btn-right { right: 0; transform: translate(50%, -50%); }
+
+        
+        /* Footer */
+        footer h2 { color: #fff; }
+        footer h3 { color: #fff; }
+        footer { background-color: #0a3622; }
+        .footer-links, .footer-icons {  color: #fff; }
+
+        /* Menu */
+        .container-menu a#btn-cta:link,
+        .container-menu a#btn-cta:visited { background-color: #0f5132}
+        .container-menu a#btn-cta:link,
+        .container-menu a#btn-cta:visited { border-color: #0f5132}
+        .container-menu a#btn-cta:focus,
+        .container-menu a#btn-cta:hover,
+        .container-menu a#btn-cta:active { border-color: #0a3622 }
+        .container-menu a#btn-cta:focus,
+        .container-menu a#btn-cta:hover,
+        .container-menu a#btn-cta:active { border-color: #0a3622 }
+        .container-menu a#btn-cta:focus,
+        .container-menu a#btn-cta:hover,
+        .container-menu a#btn-cta:active { background-color: #0a3622 }
+        .container-menu.menu-desktop { background-color: #198754 }
+        .container-menu.menu-mobile { background-color: #198754 }
+        .container-menu.menu-mobile ul.mobile-display { background-color: #198754 }
+        .container-menu a:link,
+        .container-menu a:visited { color: #fff }
+        .container-menu a:focus,
+        .container-menu a:hover,
+        .container-menu a:active { color: #ced4da }
 
     </style>
 
@@ -95,7 +125,7 @@
         <ul class="">
             <li><a href="../../../index.html">Home</a></li>
             <li><a href="../../../portfolio/index.html">Portfolio</a></li>
-            <li><a href="../../../contact/index.html" id="btn-cta"><span>Contact</span><i class="fas fa-arrow-right"></i></a></li>
+            <li><a href="../../../contact/index.html" id="btn-cta" class="btn btn-primary btn-rounded bounce-in-top"><span>Contact</span><i class="fas fa-arrow-right"></i></a></li>
         </ul>
         <div class="item-icon">
             <div class="bar1"></div>
@@ -133,6 +163,44 @@
     </main>
 
     <script>
+        (function() {
+        const pictures = [
+            "dublin-0",
+            "dublin-1",
+            "dublin-2",
+            "dublin-3",
+            "dublin-4",
+            "dublin-5"
+        ];
+
+        // Select both left and right button. Add event listeners
+        const buttons = document.querySelectorAll('.btn')
+        const imageDIV = document.querySelector('.container-img')
+        let counter = 0
+
+        buttons.forEach(function(button){
+        button.addEventListener('click', function(e) {
+                    
+            if (button.classList.contains('btn-left')) {
+                counter--;
+                if (counter < 0) {
+                    counter = pictures.length - 1;
+                }
+                imageDIV.style.backgroundImage = `url('assets/img/${pictures[counter]}.jpg')`
+                console.log(imageDIV.style.backgroundImage = `url('assets/img/${pictures[counter]}.jpg')`)
+            }
+
+            if (button.classList.contains('btn-right')) {
+                counter++;
+                if (counter > pictures.length - 1) {
+                counter = 0;
+            }
+            imageDIV.style.backgroundImage = `url('assets/img/${pictures[counter]}.jpg')`
+            console.log(imageDIV.style.backgroundImage = `url('assets/img/${pictures[counter]}.jpg')`)
+            }
+            }) // Ends loop for left and right arrows
+        })
+        })();
 
     </script>
 
@@ -140,7 +208,7 @@
     <!-- footer -->
 	<footer>
 
-		<h2>Your Name Here</h2>
+		<h2>Nora De Gregorio</h2>
 
 		<h3>Excellence in digital creation</h3>
 
@@ -151,7 +219,6 @@
 		</ul>
 
 		<ul class="footer-icons">
-			<li><a href="https://www.linkedin.com/nnnnnnnnnnn" target="_blank"><i class="fab fa-linkedin"></i></a></li>
 			<li><a href="https://github.com/nnnnnnnnnn" target="_blank"><i class="fab fa-github-square"></i></a></li>
 		</ul>
 
