--- a/portofolio/js/movies/index.html
+++ b/portofolio/js/movies/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript Movies Listing Project | Mary Smith | Front-end Developer | </title>
+    <title>JavaScript Movies Listing Project | Nora De Gregorio | Front-end Developer | </title>
     <meta name="description" content="Uses the Fetch API to retrieve a searchable list of movie titles and images from the Internet Movie Database.">
 
 	<!-- Stylesheets -->
@@ -14,9 +14,9 @@
     <style>
 
         /* ============ Header Colours =============*/
-        header.hero-block-js { background-color: var(--gray-200) }
+        header.hero-block-js { background-color: #198754 }
         header.hero-block-js h1 { color: #222 }
-        header.hero-block-js h2 { color: var(--gray-700) }
+        header.hero-block-js h2 { color: #222 }
 
         /* Main Colours */
         .theme-js { 
@@ -34,8 +34,136 @@
         /* Button Colours: active state */
         .theme-js a.btn:hover { background-color: darkblue }
 
-        /* .theme-js a.btn { background-image: linear-gradient(to right,#e052a0,#f15c41) } */
-        /* .theme-js a.btn:hover { filter: brightness(160%) saturate(140%) } */
+        .theme-js a.btn { background-image: linear-gradient(to right,#e052a0,#f15c41) } 
+        .theme-js a.btn:hover { filter: brightness(160%) saturate(140%) } 
+
+        /* ========= ENDS CUSTOM CSS FOR WEB PAGE ======= */
+
+        #search-bar {
+            width: 100%;
+            background: #0f5132;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-bottom: 1px solid #ccc;
+            text-align: center;
+            padding: 20px 0;
+        }
+
+        #search-bar h1 {
+            margin: 0 20px;
+            color: #fff;
+        }
+
+        #search-bar a {
+            text-decoration: none;
+        }
+
+        #search-bar form {
+            display: flex;
+            align-items: center;
+        }
+
+        #search {
+            width: 230px;
+            border: 1px solid black;
+            outline: none;
+            border-radius: 20px;
+            padding-left: 15px;
+            padding: 10px 20px;
+            font-size: 16px;
+        }
+
+        main {
+            display: flex; 
+            flex-direction: row; flex-wrap: wrap;
+            width: 100%;
+            justify-content: space-between;
+        }
+
+        /* Desktops/Laptops */
+        @media (min-width: 1200px) { 
+            main { 
+                padding: 3.5% calc((100% - 1140px)/2) 5% calc((100% - 1140px)/2); 
+                margin: 0 auto;
+            } 
+        }
+
+        /* Tablets and smaller desktops */
+        @media (min-width: 1025px) and (max-width: 1199px ) { 
+            main { padding: 3% 14% 3% 14% } 
+        }
+
+        /* Tablets */
+        @media (min-width: 768px) and (max-width: 1024px) { 
+            main { padding: 4% 5% 4% 5% }
+        }
+
+        /* Larger mobiles */
+        @media (min-width: 400px) and (max-width: 767px)  { 
+            main { padding: 7% 13% 8% 13% }
+        }
+
+        /* Smaller mobiles */
+        @media (max-width: 399px) { 
+            main { padding: 7% 10% 8% 10% } 
+        }
+
+        main > div {
+            margin: 19px 15px;
+            background: #0f5132;
+        }   
+
+        @media (min-width: 768px) {
+            main > div { width: 22% }
+        }
+
+        @media (max-width: 767px) {
+            main > div { width: 100%; margin: 20px 0 }
+        }
+
+        main img {
+            width: 100%;
+            height: 89%;
+            object-fit: cover;
+        }
+        main h2 {
+            font-size: 18px;
+            font-weight: 600;
+            text-align: center;
+            color: #fff;
+            padding: 12px;
+        }
+
+        /* Footer */
+        footer h2 { color: #fff; }
+        footer h3 { color: #fff; }
+        footer { background-color: #0f5132; }
+        .footer-links, .footer-icons {  color: #fff; }
+
+        /* Menu */
+        .container-menu a#btn-cta:link,
+        .container-menu a#btn-cta:visited { background-color: #0f5132}
+        .container-menu a#btn-cta:link,
+        .container-menu a#btn-cta:visited { border-color: #0f5132}
+        .container-menu a#btn-cta:focus,
+        .container-menu a#btn-cta:hover,
+        .container-menu a#btn-cta:active { border-color: #0a3622 }
+        .container-menu a#btn-cta:focus,
+        .container-menu a#btn-cta:hover,
+        .container-menu a#btn-cta:active { border-color: #0a3622 }
+        .container-menu a#btn-cta:focus,
+        .container-menu a#btn-cta:hover,
+        .container-menu a#btn-cta:active { background-color: #0a3622 }
+        .container-menu.menu-desktop { background-color: #198754 }
+        .container-menu.menu-mobile { background-color: #198754 }
+        .container-menu.menu-mobile ul.mobile-display { background-color: #198754 }
+        .container-menu a:link,
+        .container-menu a:visited { color: #fff }
+        .container-menu a:focus,
+        .container-menu a:hover,
+        .container-menu a:active { color: #ced4da }
+
 
     </style>
 
@@ -54,7 +182,7 @@
         <ul class="">
             <li><a href="../../../index.html">Home</a></li>
             <li><a href="../../../portfolio/index.html">Portfolio</a></li>
-            <li><a href="../../../contact/index.html" id="btn-cta"><span>Contact</span><i class="fas fa-arrow-right"></i></a></li>
+            <li><a href="../../../contact/index.html" id="btn-cta" class="btn btn-primary btn-rounded bounce-in-top"><span>Contact</span><i class="fas fa-arrow-right"></i></a></li>
         </ul>
         <div class="item-icon">
             <div class="bar1"></div>
@@ -75,12 +203,66 @@
     <main>
         
         <section class="container-flex theme-js">
+            <div id="search-bar">
+                <a href="#"><h1>Movies</h1></a>
+                <form id="form">
+                    <input
+                        type="text"
+                        id="search"
+                        placeholder="Search"
+                        class="search"
+                    />
+                </form>
+            </div>
 
         </section>
 
     </main>
 
     <script>
+        const apiUrl = 'https://api.themoviedb.org/3/discover/movie?sort_by=popularity.desc&api_key=04c35731a5ee918f014970082a0088b1&page=1';
+        const IMGPATH = "https://image.tmdb.org/t/p/w1280";
+        const SEARCHAPI =
+        "https://api.themoviedb.org/3/search/movie?&api_key=04c35731a5ee918f014970082a0088b1&query=";
+
+        const main = document.getElementById("main");
+        const form = document.getElementById("form");
+        const search = document.getElementById("search");
+
+        showMovies(apiUrl);
+
+        function showMovies(url){
+        fetch(url).then(res => res.json())
+            .then(function(data){
+                data.results.forEach(element => {
+                const el = document.createElement('div');
+                const image = document.createElement('img');
+                const text = document.createElement('h2');
+                text.innerHTML = truncateString(`${element.title}`, 20);
+                image.src = IMGPATH + element.poster_path;
+                el.appendChild(image);
+                el.appendChild(text);
+                main.appendChild(el);
+            }); 
+        });
+        }
+
+        form.addEventListener("submit", (e) => {
+        e.preventDefault();
+        main.innerHTML = '';
+        const searchTerm = search.value;
+        if (searchTerm) {
+            showMovies(SEARCHAPI + searchTerm);
+            search.value = "";
+        }
+        });
+
+        function truncateString(str, num) {
+        if (str.length >= num) {
+            return str
+        }
+        return str.slice(0, num) + '...'
+        }
 
     </script>
 
@@ -99,7 +281,6 @@
 		</ul>
 
 		<ul class="footer-icons">
-			<li><a href="https://www.linkedin.com/nnnnnnnnnnn" target="_blank"><i class="fab fa-linkedin"></i></a></li>
 			<li><a href="https://github.com/nnnnnnnnnn" target="_blank"><i class="fab fa-github-square"></i></a></li>
 		</ul>
 
