--- a/contact/index.html
+++ b/contact/index.html
@@ -66,7 +66,7 @@
     
         <div class="col-2">
             <div class="hero-bg-media">
-                <img src="https://picsum.photos/340/260" alt="Sample image">
+                <img class="tilt-in-fwd-tr" src="../assets/img/hands-typing.jpg" alt="Sample image">
             </div>
         </div>
     
